# tavern

./: .gitignore  .oxfmtrc.json  .oxlintrc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  soak-report.json  task.md  tsconfig.base.json
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml  nightly.yml  release.yml
.playwright-cli/: page-2026-07-13T23-41-53-662Z.yml  page-2026-07-14T02-38-11-929Z.yml  page-2026-07-14T03-16-26-601Z.yml  page-2026-07-14T03-16-32-542Z.yml  page-2026-07-14T03-16-39-185Z.yml  page-2026-07-14T03-18-13-048Z.yml  page-2026-07-14T03-18-19-272Z.yml  page-2026-07-14T03-18-24-590Z.yml  page-2026-07-14T03-18-32-105Z.yml  page-2026-07-14T03-18-45-775Z.yml  page-2026-07-14T03-18-54-177Z.yml  page-2026-07-14T03-19-01-916Z.yml  page-2026-07-14T03-19-07-718Z.yml  page-2026-07-14T03-19-22-123Z.yml  page-2026-07-14T03-20-04-108Z.yml  page-2026-07-14T03-20-20-910Z.yml  page-2026-07-14T03-20-29-700Z.yml  page-2026-07-14T03-20-39-228Z.yml  page-2026-07-14T03-20-44-396Z.yml  page-2026-07-14T03-20-51-085Z.yml  page-2026-07-14T03-21-42-474Z.yml  page-2026-07-14T03-21-50-082Z.yml  page-2026-07-14T03-22-01-083Z.yml  page-2026-07-14T03-22-10-175Z.yml  page-2026-07-14T03-22-16-382Z.yml  page-2026-07-14T03-22-30-909Z.yml  page-2026-07-14T03-35-49-265Z.yml  page-2026-07-14T03-36-03-552Z.yml  page-2026-07-14T03-37-14-507Z.yml  page-2026-07-14T03-37-46-330Z.yml  page-2026-07-14T03-37-52-947Z.yml  page-2026-07-14T03-38-35-580Z.yml  page-2026-07-14T03-38-47-972Z.yml  page-2026-07-14T03-40-40-758Z.yml  page-2026-07-14T03-41-01-392Z.yml  page-2026-07-14T03-41-51-544Z.yml  page-2026-07-14T03-59-01-434Z.yml  page-2026-07-14T03-59-12-171Z.yml  page-2026-07-14T03-59-19-387Z.yml  page-2026-07-14T03-59-31-486Z.yml  (+1 more)
app/: .env.production  index.html  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts  vitest.config.ts
app/e2e/: README.md  helpers.mjs  web-chat.mjs  web-voice.mjs
app/messages/: en.json  uk.json
app/project.inlang/: settings.json
app/public/: manifest.webmanifest
app/src/: App.svelte  App.test.ts  app.css  main.ts  main.tsx  router.tsx  theme-boot.ts  theme.ts  vite-env.d.ts
app/test/: AppSectionCloseBehavior.test.tsx  AppShell.test.tsx  ChatDropZone.test.tsx  ChatPanel.test.tsx  ChatTabs.test.tsx  Composer.test.tsx  EmojiPicker.test.tsx  JoinOrCreatePage.test.tsx  LoginPage.test.tsx  MessageList.test.tsx  MessageRowGif.test.tsx  MessageRowReaction.test.tsx  PasswordInput.test.tsx  PeoplePanel.test.tsx  PointsButton.test.tsx  PollCreateButton.test.tsx  PollRail.test.tsx  RegisterPage.test.tsx  ServerPage.test.tsx  ServerSwitcher.test.tsx  SettingsDialog.test.tsx  SidebarProfile.test.tsx  apiClient.test.ts  authTransport.test.ts  boot.test.tsx  check-literals.test.ts  gifSend.test.ts  i18n-parity.test.ts  imageResize.test.ts  notifications.test.ts  notificationsLifecycle.test.ts  notificationsPermission.test.ts  platform.test.ts  roomChat.test.ts  router.test.tsx  setup.ts  stores.test.ts  theme.test.ts  unreadBadges.test.ts  useAuth.test.ts  (+2 more)
crates/capture/: Cargo.toml
crates/capture/examples/: p4.rs
crates/capture/src/: config.rs  fake.rs  frame.rs  lib.rs  screen.rs  webcam.rs
crates/engine/: Cargo.toml
crates/engine/src/: apm.rs  audio.rs  engine.rs  lib.rs  mixer.rs  pipeline.rs  remote.rs  signaling.rs  state.rs  video.rs  watch.rs
crates/protocol/: Cargo.toml
desktop/: electron-builder.yml  electron.vite.config.ts  package.json  vitest.config.ts
desktop/scripts/: afterPack.cjs
desktop/test/: capture.test.ts  electron-mock.ts  flags.test.ts  ipc.test.ts  linux-launcher.test.ts  loopback.test.ts  notifications.test.ts  permissions.test.ts  preferences.test.ts  preload.test.ts  protocol.test.ts  secrets.test.ts  singleInstance.test.ts  tray.test.ts  updates.test.ts  venmic.test.ts  window.test.ts
docs/: DEVELOPMENT.md  PLAN.md  QOE.md  blockers.md  progress.md  release.md  spike-results.md
docs/qa/: final.md  s3.3.md  s6.0-prod-roundtrip.txt  s6.3-update-roundtrip.txt  voice.md  webcam.md
docs/spike-results/: audio.json  dump_1080p.json  dump_360p.json  p5.json  p6-a.json  p6-b.json  p7-transcript.txt  p7.json  playout.json  publish-simulcast.json  publish.json  s5.1-p4.json  s5.2-share.json  screen-1080p.json  screen-720p.json  sub-h.json  sub-l.json  subscribe.json  webcodecs.json
docs/steps/: S0-1-repo-bootstrap.md  S0-2-shared-package.md  S0-3-ci-skeleton.md  S1-1-worker-bootstrap.md  S1-2-betterauth.md  S1-3-profile-settings-avatar.md  S10-1-activity-tab.md  S10-2-stats-tab.md  S10-3-admin-ui.md  S11-1-web-target.md  S12-1-packaging.md  S12-2-autoupdate-release.md  S12-3-cost-killswitch-soak.md  S12-4-regression-closeout.md  S2-1-servers-catalog.md  S2-2-admin-ops.md  S3-1-serverroom-do-ws.md  S3-2-chat.md  S3-3-activity-log.md  S3-4-voice-state.md  S4-1-electron-shell.md  (+19 more)
e2e/: .fake-voice-crowd.mjs  package.json  playwright.config.ts  playwright.worker.config.ts  tsconfig.json
scripts/: check-fr-traceability.mjs  check-i18n-literals.mjs  dev.mjs  i18n-allowlist.txt  release.mjs
shared/: package.json  vitest.config.ts
spikes/capture/: Cargo.toml
spikes/capture/.cargo/: config.toml
spikes/e2e-voice/: Cargo.toml  p7.sh  run_p6.sh
spikes/e2e-voice/.cargo/: config.toml
spikes/e2e-voice/src/: main.rs
spikes/p5/: Cargo.toml  tauri.conf.json
spikes/p5/src/: main.rs
spikes/p5/ui/: index.html
spikes/sfu/: Cargo.toml  check_p2.sh  run_p2.sh  run_tap.sh
spikes/sfu/.cargo/: config.toml
spikes/webcodecs/: Cargo.toml  tauri.conf.json
spikes/webcodecs/capabilities/: default.json
spikes/webcodecs/src/: main.rs
spikes/webcodecs/ui/: index.html
src-tauri/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: engine_cmds.rs  lib.rs  main.rs  session.rs
worker/: .dev.vars.e2e  .dev.vars.example  auth-cli.config.ts  drizzle.config.ts  package.json  tsconfig.json  vitest.config.ts  vitest.config.ws.ts  vitest.test-env.ts  worker-configuration.d.ts  wrangler.jsonc
(+463 files in other folders)
