[package]
name = "tavern-desktop"
version = "0.1.0"
edition = "2021"
description = "Tavern desktop shell"
authors = ["Tavern"]
default-run = "tavern-desktop"

[lib]
name = "tavern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
