[package]
name = "tavern-desktop"
version = "0.1.0"
edition = "2021"
description = "Tavern desktop shell"
authors = ["Tavern"]
default-run = "tavern-desktop"

[lib]
name = "tavern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native credential storage for the session {userId, token} (S3.3). Behind a
# CredentialStore trait so tests use an in-memory mock; the real keychain is only
# exercised by the manual restart QA. Pinned exact per §1.
keyring = "3.6.3"
