[package]
name = "tavern-desktop"
version = "0.1.0"
edition = "2021"
description = "Tavern desktop shell"
authors = ["Tavern"]
default-run = "tavern-desktop"

[lib]
name = "tavern_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# OS-native credential storage for the session {userId, token} (S3.3). Behind a
# CredentialStore trait so tests use an in-memory mock; the real keychain is only
# exercised by the manual restart QA. Pinned exact per §1.
keyring = "3.6.3"
# S6.3 self-update: manifest at <api>/updates/latest.json (Worker → R2), minisign-signed.
tauri-plugin-updater = "2"
# The media engine (S4.1) + the single-source protocol types its commands carry (S4.2).
# Pulls libwebrtc into this crate's link — the bundle CI job mirrors the rust-test
# macOS clang_rt step and Linux apt deps for exactly this reason.
tavern-engine = { path = "../crates/engine" }
tavern-capture = { path = "../crates/capture" }
tavern-protocol = { path = "../crates/protocol" }
