[package]
name = "tavern-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
# Media core — same lockstep pin as crates/engine (see progress.md S1.2: libwebrtc 0.3.38
# declares webrtc-sys ^0.3.35 but 0.3.36 breaks the build; no webrtc-sys 0.3.38 exists).
libwebrtc = "=0.3.38"
webrtc-sys = "=0.3.35"
# Webcam capture (§1: nokhwa 0.10.x, pinned exact at first use). input-native enables the
# per-OS backends: AVFoundation (macOS) / MSMF (Windows) / V4L2 (Linux).
nokhwa = { version = "=0.10.11", features = ["input-native"] }

[dev-dependencies]
serde_json = "1"
