# S4.3 voice E2E spike (P6): two REAL tavern-engine processes, seeded local worker,
# real SFU, 60 s bidirectional. Throwaway harness quality; the engine under test is the
# shipped crate (path dep). Own workspace/Cargo.lock, excluded from the root (spikes/*).
[package]
name = "tavern-spike-e2e-voice"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
tavern-engine = { path = "../../crates/engine" }
tavern-protocol = { path = "../../crates/protocol" }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# WS client for the §1 voice.join sequencing (the DO authorizes /api/rtc/* off presence).
tokio-tungstenite = "0.29"
futures-util = "0.3"
