# Throwaway S5.4 spike (P5). Not shipped. Standalone Tauri app driving the REAL
# tavern-engine watch pipeline: engine str0m pulls → binary Channel IPC → WebCodecs →
# canvas, 10 tiles (9×360p@300k + 1×1080p@2.5M from the e2e-voice pubsynth publishers).
# Excluded from the root workspace (spikes/*), own Cargo.lock, macOS-local/manual only.
[package]
name = "tavern-spike-p5"
version = "0.0.0"
publish = false
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tavern-engine = { path = "../../crates/engine" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio-tungstenite = "0.29"
futures-util = "0.3"
