# Throwaway M1 spike crate (S1.2 publisher, S1.3 subscriber). Not shipped.
[package]
name = "tavern-spike-sfu"
version = "0.0.0"
edition = "2021"
publish = false

[dependencies]
libwebrtc = "=0.3.38"
# libwebrtc 0.3.38 declares webrtc-sys "0.3.35" (caret); the resolver otherwise pulls
# 0.3.36, whose FrameMetadata FFI struct (added `user_data`) breaks 0.3.38's source.
# Pin the exact lockstep version. See progress.md S1.2.
webrtc-sys = "=0.3.35"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3" # StreamExt::next() for NativeVideoStream (subscribe.rs)
