# Throwaway M1 spike crate (S1.5 WebCodecs decode probe, P3). Not shipped.
# Standalone Tauri app: streams the S1.4 IVF dumps over a binary Channel to a WebCodecs
# VideoDecoder in the webview and measures decode fps. Excluded from the root workspace
# (spikes/*), own Cargo.lock. macOS-local/manual only.
[package]
name = "tavern-spike-webcodecs"
version = "0.0.0"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
